--- a/Estilos/Socios.css
+++ b/Estilos/Socios.css
@@ -1,12 +1,22 @@
-#calendario p{
+#banner h2 {
+  text-align: center;
+}
+
+#socio p{
   padding-left: 10px;
   font-weight: bold;
 }
+#socio .contenedor{
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
 
-#calendario h2,h3,h4{
+#socio h2,h3,h4{
   text-align: center;
 }
-#calendario .contenedor input{
+#socio .contenedor input{
   margin:10px;
   position: auto;
 }
@@ -16,11 +26,17 @@
   background-repeat: no-repeat;
   width: 400px;
   max-width: 1000px;
-  margin: auto;
+  margin:10px;
   border: 5px solid ;
   border-radius: 12px;
-
 }
+@media (min-width:1024px){
+  .formulario {
+      margin: 40px;
+  }
+}
+ 
+
 
 .formulario input[type="button"]{
   background-color: #2649a3;
@@ -56,9 +72,9 @@
 }
 .formulario .radio label:hover {
   background: rgba(38,73,163,0.3);
-  margin: 10px;
   padding: 5px 15px;
   border-radius: 40px;
   color: #000;
   transition: all 0.4s;
 }
+
