--- a/Estilos/Calendario-pag.css
+++ b/Estilos/Calendario-pag.css
@@ -1,9 +1,12 @@
 #banner {
     text-align: center;
 }
+#calendario a{
+    color: #000;
+    text-decoration: none;
+}
 #calendario .VS{
-    border: solid 5px #000;
-    border-radius: 20px;
+   
     margin-bottom: 10px;
     margin-right: 20px;
     margin-left: 20px; 
